# manufacturing-analytics-spark

./: .gitignore  README.md  pyproject.toml
data/: production_metrics.csv
src/manufacturing_analytics/: __init__.py  ai_assistant.py  config.py  data_ingestion.py  delta_time_travel.py  graph_analytics.py  main.py  ml_analytics.py  output.py  processing.py  storage.py  streaming.py  utils.py
tests/: test_manufacturing.py
